--- a/Classes/Controller/Post/PostTableViewCell.xib
+++ b/Classes/Controller/Post/PostTableViewCell.xib
@@ -101,7 +101,7 @@
 							<object class="IBUILabel" id="737818473">
 								<reference key="NSNextResponder" ref="27607831"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{224, 7}, {96, 21}}</string>
+								<string key="NSFrame">{{224, 16}, {96, 21}}</string>
 								<reference key="NSSuperview" ref="27607831"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="292848123"/>
@@ -120,7 +120,7 @@
 							<object class="IBUILabel" id="178121312">
 								<reference key="NSNextResponder" ref="27607831"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{14, 73}, {60, 21}}</string>
+								<string key="NSFrame">{{10, 73}, {60, 21}}</string>
 								<reference key="NSSuperview" ref="27607831"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="737818473"/>
@@ -135,6 +135,7 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
 							</object>
 							<object class="IBUIView" id="426683019">
 								<reference key="NSNextResponder" ref="27607831"/>
